[gd_scene load_steps=12 format=3 uid="uid://b13w87rkhvwcv"]

[ext_resource type="Script" path="res://scripts/challenge_collectable.gd" id="1_a1b2c"]
[ext_resource type="Texture2D" uid="uid://d1k2653078dyf" path="res://assets/textures/embers.png" id="2_a2b3c"]

[sub_resource type="SphereShape3D" id="SphereShape3D_col1"]

[sub_resource type="SphereShape3D" id="SphereShape3D_col2"]
radius = 1.2

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_elem1"]
emission_shape = 1
emission_sphere_radius = 0.6
direction = Vector3(0, 1, 0)
spread = 60.0
initial_velocity_min = 0.5
initial_velocity_max = 1.0
gravity = Vector3(0, 0.5, 0)
scale_min = 0.05
scale_max = 0.1
color = Color(0.8, 0.8, 1, 0.6)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_elem1"]
transparency = 1
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("2_a2b3c")

[sub_resource type="QuadMesh" id="QuadMesh_elem1"]
material = SubResource("StandardMaterial3D_elem1")

[sub_resource type="SphereMesh" id="SphereMesh_elem1"]

[sub_resource type="Animation" id="Animation_collect"]
resource_name = "collect"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ElementParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ScanHighlight:light_energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.5, 2.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ElementLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_pulse"]
resource_name = "pulse"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScanHighlight:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.5, 1.2, 0.5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1"]
_data = {
"collect": SubResource("Animation_collect"),
"pulse": SubResource("Animation_pulse")
}

[node name="ChallengeCollectable" type="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_layer = 9
collision_mask = 0
script = ExtResource("1_a1b2c")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_col1")

[node name="CollectionArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="CollectionArea"]
shape = SubResource("SphereShape3D_col2")

[node name="ScanHighlight" type="OmniLight3D" parent="."]
visible = false
light_color = Color(0.2, 0.8, 1, 1)
light_energy = 0.5
omni_range = 1.5

[node name="ElementParticles" type="GPUParticles3D" parent="."]
emitting = false
amount = 16
lifetime = 1.2
one_shot = true
explosiveness = 0.25
visibility_aabb = AABB(-1, -1, -1, 2, 2, 2)
process_material = SubResource("ParticleProcessMaterial_elem1")
draw_pass_1 = SubResource("QuadMesh_elem1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_elem1")

[node name="ElementLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
billboard = 1
text = "C"
font_size = 24
outline_size = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1")
}
